--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "45 1 * * 0"
+    - cron: '30 * * * *'
 
 env:
   ANSIBLE_FORCE_COLOR: true
