--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '30 * * * *'
+    - cron: '03 4,9,10,17,19,22 * * *'
   workflow_dispatch:
 
 env:
