--- a/main.yml
+++ b/main.yml
@@ -76,6 +76,9 @@
     - name: geerlingguy.composer
       delegate_to: '{{ container_name }}'
 
+    - role: geerlingguy.ansible
+      delegate_to: '{{ container_name }}'
+
   post_tasks:
     - name: Clean up the container.
       shell: >
