--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
-- src: geerlingguy.apache
+- src: buluma.apache
 - src: geerlingguy.php-versions
-- src: geerlingguy.php
+- src: buluma.php
 - src: geerlingguy.php-mysql
 - src: geerlingguy.composer
-- src: geerlingguy.ansible
+- src: buluma.ansible
