--- a/main.yml
+++ b/main.yml
@@ -61,13 +61,13 @@
       delegate_to: '{{ container_name }}'
 
   roles:
-    - name: buluma.apache
+    - name: geerlingguy.apache
       delegate_to: '{{ container_name }}'
 
     - name: geerlingguy.php-versions
       delegate_to: '{{ container_name }}'
 
-    - name: buluma.php
+    - name: geerlingguy.php
       delegate_to: '{{ container_name }}'
 
     - name: geerlingguy.php-mysql
@@ -76,7 +76,7 @@
     - name: geerlingguy.composer
       delegate_to: '{{ container_name }}'
 
-    - role: buluma.ansible
+    - role: geerlingguy.ansible
       delegate_to: '{{ container_name }}'
 
   post_tasks:
