--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,12 @@ on:
     branches:
       - master
   schedule:
-    - cron: '03 4,9,10,17,19,22 * * *'
+    - cron: '3 4,9,10,22 * * *'
   workflow_dispatch:
+  
+concurrency:
+  group: ${{ github.ref }}-${{ github.workflow }}
+  cancel-in-progress: true
 
 env:
   ANSIBLE_FORCE_COLOR: true
